// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LanguageParser should parse Go fixtures correctly 1`] = `
[
  {
    "chunk_hash": "fd68edbadc1535917a1bca6848f45e93c6588249f923c24958981b6c28f2a045",
    "containerPath": "",
    "content": "import "fmt"",
    "created_at": "[TIMESTAMP]",
    "endLine": 3,
    "filePath": "tests/fixtures/go.go",
    "git_branch": "main",
    "git_file_hash": "3617ff140f9ed70e1b2ee35bb62bf5929961447a",
    "imports": [
      {
        "path": "fmt",
        "symbols": [],
        "type": "module",
      },
    ],
    "kind": "import_declaration",
    "language": "go",
    "semantic_text": "filePath: tests/fixtures/go.go
kind: import_declaration

import "fmt"",
    "startLine": 3,
    "symbols": [
      {
        "kind": "function",
        "line": 6,
        "name": "Hello",
      },
      {
        "kind": "type",
        "line": 10,
        "name": "MyType",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "0c01bc050a86f2516932d9c238e35e968f09510f2fa933e224bc9e66e4a3781c",
    "containerPath": "",
    "content": "// Hello is a function that prints a greeting.",
    "created_at": "[TIMESTAMP]",
    "endLine": 5,
    "filePath": "tests/fixtures/go.go",
    "git_branch": "main",
    "git_file_hash": "3617ff140f9ed70e1b2ee35bb62bf5929961447a",
    "imports": [
      {
        "path": "fmt",
        "symbols": [],
        "type": "module",
      },
    ],
    "kind": "comment",
    "language": "go",
    "semantic_text": "filePath: tests/fixtures/go.go
kind: comment

// Hello is a function that prints a greeting.",
    "startLine": 5,
    "symbols": [
      {
        "kind": "function",
        "line": 6,
        "name": "Hello",
      },
      {
        "kind": "type",
        "line": 10,
        "name": "MyType",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "0c01bc050a86f2516932d9c238e35e968f09510f2fa933e224bc9e66e4a3781c",
    "containerPath": "",
    "content": "// Hello is a function that prints a greeting.",
    "created_at": "[TIMESTAMP]",
    "endLine": 5,
    "filePath": "tests/fixtures/go.go",
    "git_branch": "main",
    "git_file_hash": "3617ff140f9ed70e1b2ee35bb62bf5929961447a",
    "imports": [
      {
        "path": "fmt",
        "symbols": [],
        "type": "module",
      },
    ],
    "kind": "comment",
    "language": "go",
    "semantic_text": "filePath: tests/fixtures/go.go
kind: comment

// Hello is a function that prints a greeting.",
    "startLine": 5,
    "symbols": [
      {
        "kind": "function",
        "line": 6,
        "name": "Hello",
      },
      {
        "kind": "type",
        "line": 10,
        "name": "MyType",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "60182a39609bfe8bdda418af2ef400cdd9f97a08d48122566e1f760112d05b8d",
    "containerPath": "",
    "content": "fmt.Println("Hello, Go!")",
    "created_at": "[TIMESTAMP]",
    "endLine": 7,
    "filePath": "tests/fixtures/go.go",
    "git_branch": "main",
    "git_file_hash": "3617ff140f9ed70e1b2ee35bb62bf5929961447a",
    "imports": [
      {
        "path": "fmt",
        "symbols": [],
        "type": "module",
      },
    ],
    "kind": "call_expression",
    "language": "go",
    "semantic_text": "filePath: tests/fixtures/go.go
kind: call_expression

fmt.Println("Hello, Go!")",
    "startLine": 7,
    "symbols": [
      {
        "kind": "function",
        "line": 6,
        "name": "Hello",
      },
      {
        "kind": "type",
        "line": 10,
        "name": "MyType",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse Java fixtures correctly 1`] = `
[
  {
    "chunk_hash": "01fb998a1b76939bde6bbce21bbd358fe186be860339025492b71218b0248574",
    "containerPath": "MyClass",
    "content": "/**
     * This is a Javadoc comment.
     */",
    "created_at": "[TIMESTAMP]",
    "endLine": 6,
    "filePath": "tests/fixtures/java.java",
    "git_branch": "main",
    "git_file_hash": "676cf70813c5f27e977bf1c08dd977ddfd4d4906",
    "imports": [
      {
        "path": "java.util.List",
        "symbols": [
          "List",
        ],
        "type": "module",
      },
    ],
    "kind": "block_comment",
    "language": "java",
    "semantic_text": "filePath: tests/fixtures/java.java
kind: block_comment
containerPath: MyClass

/**
     * This is a Javadoc comment.
     */",
    "startLine": 4,
    "symbols": [
      {
        "kind": "class",
        "line": 3,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 7,
        "name": "myMethod",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "01fb998a1b76939bde6bbce21bbd358fe186be860339025492b71218b0248574",
    "containerPath": "MyClass",
    "content": "/**
     * This is a Javadoc comment.
     */",
    "created_at": "[TIMESTAMP]",
    "endLine": 6,
    "filePath": "tests/fixtures/java.java",
    "git_branch": "main",
    "git_file_hash": "676cf70813c5f27e977bf1c08dd977ddfd4d4906",
    "imports": [
      {
        "path": "java.util.List",
        "symbols": [
          "List",
        ],
        "type": "module",
      },
    ],
    "kind": "block_comment",
    "language": "java",
    "semantic_text": "filePath: tests/fixtures/java.java
kind: block_comment
containerPath: MyClass

/**
     * This is a Javadoc comment.
     */",
    "startLine": 4,
    "symbols": [
      {
        "kind": "class",
        "line": 3,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 7,
        "name": "myMethod",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "5a6f7755ddd7f02c160e744130e3ef226397b9fd3cbca4d7743d1e8bd129accf",
    "containerPath": "",
    "content": "System.out.println("Hello, Java!")",
    "created_at": "[TIMESTAMP]",
    "endLine": 8,
    "filePath": "tests/fixtures/java.java",
    "git_branch": "main",
    "git_file_hash": "676cf70813c5f27e977bf1c08dd977ddfd4d4906",
    "imports": [
      {
        "path": "java.util.List",
        "symbols": [
          "List",
        ],
        "type": "module",
      },
    ],
    "kind": "method_invocation",
    "language": "java",
    "semantic_text": "filePath: tests/fixtures/java.java
kind: method_invocation

System.out.println("Hello, Java!")",
    "startLine": 8,
    "symbols": [
      {
        "kind": "class",
        "line": 3,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 7,
        "name": "myMethod",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse JavaScript fixtures correctly 1`] = `
[
  {
    "chunk_hash": "bfbce26d696921c2281b7e4c2eebed78128ac63be763d2b09fa054793a790934",
    "containerPath": "",
    "content": "// This is a comment",
    "created_at": "[TIMESTAMP]",
    "endLine": 1,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "66a4426da26b3dd783dd4f065db3fcb5be3c99c4",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "comment",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
kind: comment

// This is a comment",
    "startLine": 1,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "7879ae4ab38bdc5513c4af4a422cd870415b4e829ebd550543748ead16e0f1a4",
    "containerPath": "",
    "content": "/**
 * This is a JSDoc comment.
 */",
    "created_at": "[TIMESTAMP]",
    "endLine": 6,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "66a4426da26b3dd783dd4f065db3fcb5be3c99c4",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "comment",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
kind: comment

/**
 * This is a JSDoc comment.
 */",
    "startLine": 4,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "7879ae4ab38bdc5513c4af4a422cd870415b4e829ebd550543748ead16e0f1a4",
    "containerPath": "",
    "content": "/**
 * This is a JSDoc comment.
 */",
    "created_at": "[TIMESTAMP]",
    "endLine": 6,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "66a4426da26b3dd783dd4f065db3fcb5be3c99c4",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "comment",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
kind: comment

/**
 * This is a JSDoc comment.
 */",
    "startLine": 4,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "b8059cfb1ea623e79efbf432db31595df213c99c6534c58bec9d5f5e069344df",
    "containerPath": "",
    "content": "console.log('Hello, world!')",
    "created_at": "[TIMESTAMP]",
    "endLine": 8,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "66a4426da26b3dd783dd4f065db3fcb5be3c99c4",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "call_expression",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
kind: call_expression

console.log('Hello, world!')",
    "startLine": 8,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse Markdown fixtures correctly 1`] = `
[
  {
    "chunk_hash": "ed09ca2736773c6ceb4e8e5499e71d1a80fd6a4a346efff7a88a2d6c3ff27274",
    "content": "# Markdown Fixture",
    "created_at": "[TIMESTAMP]",
    "endLine": 1,
    "filePath": "tests/fixtures/markdown.md",
    "git_branch": "main",
    "git_file_hash": "897cccd1ed4fa835aedaa753ccef511d4be75898",
    "language": "markdown",
    "semantic_text": "filePath: tests/fixtures/markdown.md

# Markdown Fixture",
    "startLine": 1,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "152f882642f9c50be75eeade70c1ea1e2cfbe7901db4a0a46b2f9d25159c755f",
    "content": "This is a paragraph.",
    "created_at": "[TIMESTAMP]",
    "endLine": 3,
    "filePath": "tests/fixtures/markdown.md",
    "git_branch": "main",
    "git_file_hash": "897cccd1ed4fa835aedaa753ccef511d4be75898",
    "language": "markdown",
    "semantic_text": "filePath: tests/fixtures/markdown.md

This is a paragraph.",
    "startLine": 3,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "6a71ffba5e7729a8faef7020e41476963c3a49ca90958e41ce8eb234ed005d08",
    "content": "## This is a heading",
    "created_at": "[TIMESTAMP]",
    "endLine": 5,
    "filePath": "tests/fixtures/markdown.md",
    "git_branch": "main",
    "git_file_hash": "897cccd1ed4fa835aedaa753ccef511d4be75898",
    "language": "markdown",
    "semantic_text": "filePath: tests/fixtures/markdown.md

## This is a heading",
    "startLine": 5,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "8dada63f9b5a079670e1e692f1790aa4334c5d920f6333a56d49d483eac7f42d",
    "content": "This is another paragraph.
",
    "created_at": "[TIMESTAMP]",
    "endLine": 8,
    "filePath": "tests/fixtures/markdown.md",
    "git_branch": "main",
    "git_file_hash": "897cccd1ed4fa835aedaa753ccef511d4be75898",
    "language": "markdown",
    "semantic_text": "filePath: tests/fixtures/markdown.md

This is another paragraph.
",
    "startLine": 7,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse Python fixtures correctly 1`] = `
[
  {
    "chunk_hash": "12bc33d9722a0828233d0d9bf5fa151caa0521f490ef4fe5ca7bcc3b6faeeaeb",
    "containerPath": "",
    "content": "print("Hello, Python!")",
    "created_at": "[TIMESTAMP]",
    "endLine": 5,
    "filePath": "tests/fixtures/python.py",
    "git_branch": "main",
    "git_file_hash": "deccc575415922af2636d83dab41365c1cd68f33",
    "imports": [
      {
        "path": "os",
        "symbols": [],
        "type": "module",
      },
    ],
    "kind": "call",
    "language": "python",
    "semantic_text": "filePath: tests/fixtures/python.py
kind: call

print("Hello, Python!")",
    "startLine": 5,
    "symbols": [
      {
        "kind": "class",
        "line": 3,
        "name": "MyClass",
      },
      {
        "kind": "function",
        "line": 4,
        "name": "my_method",
      },
      {
        "kind": "function",
        "line": 7,
        "name": "my_function",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse TypeScript fixtures correctly 1`] = `
[
  {
    "chunk_hash": "bfbce26d696921c2281b7e4c2eebed78128ac63be763d2b09fa054793a790934",
    "containerPath": "",
    "content": "// This is a comment",
    "created_at": "[TIMESTAMP]",
    "endLine": 1,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "0e2943e2881dd83ae189d91d413ddcc47ea685ff",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "comment",
    "language": "typescript",
    "semantic_text": "filePath: tests/fixtures/typescript.ts
kind: comment

// This is a comment",
    "startLine": 1,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
      {
        "kind": "type",
        "line": 19,
        "name": "MyType",
      },
      {
        "kind": "interface",
        "line": 23,
        "name": "MyInterface",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "7879ae4ab38bdc5513c4af4a422cd870415b4e829ebd550543748ead16e0f1a4",
    "containerPath": "",
    "content": "/**
 * This is a JSDoc comment.
 */",
    "created_at": "[TIMESTAMP]",
    "endLine": 6,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "0e2943e2881dd83ae189d91d413ddcc47ea685ff",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "comment",
    "language": "typescript",
    "semantic_text": "filePath: tests/fixtures/typescript.ts
kind: comment

/**
 * This is a JSDoc comment.
 */",
    "startLine": 4,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
      {
        "kind": "type",
        "line": 19,
        "name": "MyType",
      },
      {
        "kind": "interface",
        "line": 23,
        "name": "MyInterface",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "7879ae4ab38bdc5513c4af4a422cd870415b4e829ebd550543748ead16e0f1a4",
    "containerPath": "",
    "content": "/**
 * This is a JSDoc comment.
 */",
    "created_at": "[TIMESTAMP]",
    "endLine": 6,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "0e2943e2881dd83ae189d91d413ddcc47ea685ff",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "comment",
    "language": "typescript",
    "semantic_text": "filePath: tests/fixtures/typescript.ts
kind: comment

/**
 * This is a JSDoc comment.
 */",
    "startLine": 4,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
      {
        "kind": "type",
        "line": 19,
        "name": "MyType",
      },
      {
        "kind": "interface",
        "line": 23,
        "name": "MyInterface",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "b8059cfb1ea623e79efbf432db31595df213c99c6534c58bec9d5f5e069344df",
    "containerPath": "",
    "content": "console.log('Hello, world!')",
    "created_at": "[TIMESTAMP]",
    "endLine": 8,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "0e2943e2881dd83ae189d91d413ddcc47ea685ff",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "call_expression",
    "language": "typescript",
    "semantic_text": "filePath: tests/fixtures/typescript.ts
kind: call_expression

console.log('Hello, world!')",
    "startLine": 8,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
      {
        "kind": "type",
        "line": 19,
        "name": "MyType",
      },
      {
        "kind": "interface",
        "line": 23,
        "name": "MyInterface",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse YAML fixtures correctly 1`] = `
[
  {
    "chunk_hash": "7faf28cc86373c82f34b2d4885392ed863a17a33a23fa5ef55caf75a9b798085",
    "content": "document: one",
    "created_at": "[TIMESTAMP]",
    "endLine": 1,
    "filePath": "tests/fixtures/yaml.yml",
    "git_branch": "main",
    "git_file_hash": "e635a9db09a145f597bde1f8f5ab828c44b3134d",
    "language": "yaml",
    "semantic_text": "filePath: tests/fixtures/yaml.yml

document: one",
    "startLine": 1,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "42b8143ee2f453a99da7d620fa6e4098ce5b58a81e47ee92787784673290acc1",
    "content": "pair:",
    "created_at": "[TIMESTAMP]",
    "endLine": 2,
    "filePath": "tests/fixtures/yaml.yml",
    "git_branch": "main",
    "git_file_hash": "e635a9db09a145f597bde1f8f5ab828c44b3134d",
    "language": "yaml",
    "semantic_text": "filePath: tests/fixtures/yaml.yml

pair:",
    "startLine": 2,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "f61f046945e572e3c609093a9bb46677315f28cb523f1d4df55f2a96e8e00a10",
    "content": "  key: value",
    "created_at": "[TIMESTAMP]",
    "endLine": 3,
    "filePath": "tests/fixtures/yaml.yml",
    "git_branch": "main",
    "git_file_hash": "e635a9db09a145f597bde1f8f5ab828c44b3134d",
    "language": "yaml",
    "semantic_text": "filePath: tests/fixtures/yaml.yml

  key: value",
    "startLine": 3,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "546d6629778413283752817130f850389ab7f46b2a45ed5e9cd45a5e32ae18b0",
    "content": "document: two",
    "created_at": "[TIMESTAMP]",
    "endLine": 1,
    "filePath": "tests/fixtures/yaml.yml",
    "git_branch": "main",
    "git_file_hash": "e635a9db09a145f597bde1f8f5ab828c44b3134d",
    "language": "yaml",
    "semantic_text": "filePath: tests/fixtures/yaml.yml

document: two",
    "startLine": 1,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "ac0cddc5cbd16b18271a122ebc7fd418edd369c3bb11e941a823acd63ea91b9c",
    "content": "another_pair:",
    "created_at": "[TIMESTAMP]",
    "endLine": 2,
    "filePath": "tests/fixtures/yaml.yml",
    "git_branch": "main",
    "git_file_hash": "e635a9db09a145f597bde1f8f5ab828c44b3134d",
    "language": "yaml",
    "semantic_text": "filePath: tests/fixtures/yaml.yml

another_pair:",
    "startLine": 2,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "3255b416a16255d96420a3c3fbed1c6c8e36bb9929283c23d741904a51770ace",
    "content": "  nested_key: nested_value",
    "created_at": "[TIMESTAMP]",
    "endLine": 3,
    "filePath": "tests/fixtures/yaml.yml",
    "git_branch": "main",
    "git_file_hash": "e635a9db09a145f597bde1f8f5ab828c44b3134d",
    "language": "yaml",
    "semantic_text": "filePath: tests/fixtures/yaml.yml

  nested_key: nested_value",
    "startLine": 3,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
]
`;
